syntax = "proto3";

import "common.proto";

option go_package = "volpe-framework/comms/api";

service VolpeAPI {
 rpc RegisterProblem(stream ImageStreamObject) returns (Result) {};
  rpc StartProblem(StartProblemRequest) returns (Result) {};
  rpc StreamResults(StreamResultsRequest) returns (stream ProblemResult) {};
  rpc AbortProblem(AbortProblemRequest) returns (Result) {};
}

message CreateImageRequest {
  string imageName = 1;
  int32 imageSizeBytes = 2;
}

message Result {
  bool success = 1;
  string errorMessage = 2;
}

message StartProblemRequest {
  string problemID = 1;
}

message StreamResultsRequest {
  string problemID = 1;
}

message ProblemResult {
  string problemID = 1;
  Population bestResults = 2;
}

message AbortProblemRequest {
  string problemID = 1;
}
